# rc

./: .gitignore  Cargo.toml  Justfile  README.md  grammar.pest  tests.bats
examples/: binomial.rc  factorial.rc  fibonacci.rc  gaussian.rc  interval_tests.rc  isqrt_map.rc  pipe.rc
src/: algebra.rs  eval.rs  expr.rs  interval.rs  lib.rs  main.rs  number.rs  parser.rs  tests.rs  vector.rs
